Some edge cases